https://numworx.atlassian.net/browse/DWOPLAY-465
backstep niet als het niet kan

git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DwoPlayer/GWT/trunk@27437 58dd2db4-0f11-0410-9df4-da15f00f50bd